difference nom(affichabel) / patronyme

--- a/VDM_stockFX/src/application/application.css
+++ b/VDM_stockFX/src/application/application.css
@@ -1,1 +1,13 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+
+
+
+/*
+ .centre {
+	-fx-background-color: darkgrey    ;
+}
+
+.centre_vbox {
+	-fx-background-color: lightgrey    ;
+}
+*/
